--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.20.0
-pandas>=1.5.0
-openpyxl>=3.0.0
-xlrd>=2.0.0
-reportlab>=3.6.0
-Pillow>=9.0.0 
+streamlit>=1.28.0
+pandas>=2.0.0
+openpyxl>=3.1.0
+xlrd==2.0.1
+reportlab>=4.0.0
+Pillow>=10.0.0 
